<resources>
    <string name="app_name">BloodNation</string>
    <string name="facebook_application_id" translatable="false">151401969456117</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb151401969456117</string>
    <string-array name="blood_type">
        <item>A+</item>
        <item>A-</item>
        <item>B+</item>
        <item>B-</item>
        <item>O+</item>
        <item>O-</item>
        <item>AB+</item>
        <item>AB-</item>
    </string-array>


    <string-array name="blood_search">
        <item>All</item>
        <item>A+</item>
        <item>A-</item>
        <item>B+</item>
        <item>B-</item>
        <item>O+</item>
        <item>O-</item>
        <item>AB+</item>
        <item>AB-</item>
    </string-array>

    <string-array name="donate_urgency">
        <item>Not Right Now</item>
        <item>Friends Only</item>
        <item>Donate to Anyone</item>

    </string-array>

    <string name="bloodnation">Blood Nation</string>


    <!-- TABLE NAMES -->
    <string name="Table_donor">donors</string>


    <!--COLUMN NAMES -->

    <string name="Column_donor_id">donor_id</string>


    <string name="logo">logo</string>
    <string name="manual">Manual</string>
    <string name="profile">Profile</string>
    <string name="search">Search</string>


    <!-- HEADINGS -->

    <string name="addDonor">Add a Donor</string>
    <string name="sig_up_page_heading">Update Your Profile</string>

    <!-- FORMS -->

    <string name="name">Display Name</string>
    <string name="nameHead">Provide Us Your Name</string>
    <string name="email">Email Address</string>
    <string name="phone">Phone Number</string>
    <string name="password">Six Character Password</string>
    <string name="dateOfBirth">Date of Birth</string>
    <string name="profilePicture">Profile Picture</string>
    <string name="next">NEXT</string>


    <!--BUTTONS -->

    <string name="signOut">Sign Out</string>
    <string name="signIn">Sign In</string>
    <string name="update">Update</string>
    <string name="updateProfile">Update Profile</string>
    <string name="Submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="login_register">Log In / Register</string>

    <!-- Miscellaneous -->

    <string name="noPhoneNoFound">No Phone Number Found</string>
    <string name="comeLater">You can always come back here later</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add">Add</string>
    <string name="plus">+</string>


    <!--Sizes -->

    <string name="formHeight">50dp</string>
    <string name="display_image">Display Image</string>
    <string name="create_an_account">Create An Account</string>
    <string name="update_profile">Update Profile</string>
    <string name="load_contacts">Load Contacts</string>
    <string name="manualMenu">ManualMenu</string>
    <string name="close">Close</string>
    <string name="blood_group">Blood Group</string>
    <string name="priority">Priority</string>
    <string name="settings">Settings</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="add_donation_date">Add Donation Date</string>
    <string name="donation_date">Donation Date</string>


</resources>
