<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".authentication.SignUpConfirmation"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.05" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".95" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.025" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.9725" />

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline15"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toTopOf="@+id/guideline16">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/upPhotoInput"
                    android:layout_width="81dp"
                    android:layout_height="83dp"
                    android:contentDescription="@string/profilePicture"
                    app:layout_constraintHeight_percent=".2"
                    app:layout_constraintWidth_percent=".2"
                    app:srcCompat="@drawable/ic_account_box_black_24dp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/upNameInput"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    app:errorEnabled="true"
                    app:helperText="***"
                    app:helperTextEnabled="true"
                    app:helperTextTextColor="@color/colorLight">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:singleLine="true"/>


                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/upBloodInput"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/blood_group"
                    app:errorEnabled="true"
                    app:helperText="***"
                    app:helperTextEnabled="true"
                    app:helperTextTextColor="@color/colorLight"
                    app:layout_constraintEnd_toStartOf="@+id/glBorderEnd"
                    app:layout_constraintStart_toStartOf="@+id/glBorderStart"
                    app:layout_constraintTop_toBottomOf="@+id/upNameInput">

                    <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="none" />


                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/upEagerInput"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/priority"
                    app:errorEnabled="true"
                    app:helperText="***"
                    app:helperTextEnabled="true"
                    app:helperTextTextColor="@color/colorLight"
                    app:layout_constraintEnd_toStartOf="@+id/glBorderEnd"
                    app:layout_constraintStart_toStartOf="@+id/glBorderStart"
                    app:layout_constraintTop_toBottomOf="@+id/upBloodInput">

                    <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="none" />


                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/upDateInput"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/dateOfBirth"
                    app:endIconDrawable="@drawable/ic_event_black_24dp"
                    app:errorEnabled="true"
                    app:helperText="***"
                    app:helperTextEnabled="true"
                    app:helperTextTextColor="@color/colorLight"
                    app:layout_constraintEnd_toStartOf="@+id/glBorderEnd"
                    app:layout_constraintStart_toStartOf="@+id/glBorderStart"
                    app:layout_constraintTop_toBottomOf="@+id/upEagerInput">

                    <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="none" />


                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/upPhoneInput"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/phone"
                    app:helperText=" "
                    app:layout_constraintEnd_toStartOf="@+id/glBorderEnd"
                    app:layout_constraintStart_toStartOf="@+id/glBorderStart"
                    app:layout_constraintTop_toBottomOf="@+id/upDateInput">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="phone" />


                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/upEmailInput"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    app:errorEnabled="true"
                    app:helperText=" "
                    app:layout_constraintEnd_toStartOf="@+id/glBorderEnd"
                    app:layout_constraintStart_toStartOf="@+id/glBorderStart"
                    app:layout_constraintTop_toBottomOf="@+id/upPhoneInput">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />


                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/upSubmit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorLight"
                    android:gravity="center"
                    android:paddingTop="12dp"
                    android:paddingBottom="12dp"
                    android:text="@string/update"
                    android:textColor="#FFFFFF"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toStartOf="@+id/glBorderEnd"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/glBorderStart"
                    app:layout_constraintTop_toBottomOf="@+id/upEmailInput" />
            </LinearLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>